# pandoc-test

./: .gitignore  LICENSE  README.md  pandoc-test.cabal
etc/: example-question.md  example.md
src/: PandocTest.hs  PandocTest2.hs
src/Pandoc/: Test.hs
