name:               pandoc-test
version:            0.0.1
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>, Joshua Morris <ɯoɔ˙lᴉɐɯƃ@llǝʞsɐɥ+sᴉɹɹoɯuɥoɾɐnɥsoɾ>
maintainer:         Tony Morris
copyright:          Copyright (c) 2017 Tony Morris
synopsis:           pandoc test
category:           Test
description:        pandoc test
homepage:           https://github.com/tonymorris/pandoc-test
bug-reports:        https://github.com/tonymorris/pandoc-test/issues
cabal-version:      >= 1.10
build-type:         Custom
source-repository   head
  type:             git
  location:         git@github.com:tonymorris/pandoc-test.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 4.8
                    , pandoc == 1.19.2
                    , pandoc-types == 1.18
                    , texmath == 0.10
                    , lens
                    , containers
                    , filepath
                    , bytestring
                    
  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Pandoc.Test
                    
test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8
                    , parsec >= 3.1
                    , quickcheck-text

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
